Add support for relative source references when including blocks.
git-svn-id: https://svn.apache.org/repos/asf/avalon/trunk@18534 13f79535-47bb-0310-9956-ffa450edef68